2001-11-22  Mark McLoughlin  <mark@skynet.ie>

	* gnome-app.c: (gnome_app_set_menus), (gnome_app_add_toolbar):
	update for gtk_accel_groups_from_acceleratable to
	gtk_accel_groups_from_object.

Tue Nov 20 16:12:09 2001  Owen Taylor  <otaylor@redhat.com>

	* libgnomeuiP.h: Remove excess gobject/* include.

Sun Nov 18 2001  Miles Lane <miles@megapathdsl.net>

	* libgnomeui/Makefile.am: replace <gobject/genums.h>
	  with <glib-object.h> due to the addition of an #error into
	  genums.h that specifies that only glib-object.h should
	  be included directly.  This patch fixes the build.
	  Approved by Michael.

Sun Nov 18 14:31:59 2001  George Lebl <jirka@5z.com>

	* gnome-icon-sel.c, gnome-mdi.c: Get rid of GTK_OBJECT_DESTROYED
	  usage.  The code was very very broken in those cases anyway
	  actually.

	* gnome_segv.c: use g_find_program_in_path instead of
	  gnome_is_program_in_path

Fri Nov 16 02:06:32 2001  George Lebl <jirka@5z.com>

	* gnome-file-entry.c: change order of includes to make this compile
	  yet again

2001-11-15  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-href.c: Fix a typo.
	
2001-11-14  Michael Meeks  <michael@ximian.com>

	* gnome-app-helper.c (gnome_save_accels):
	gtk_accel_map_save instead of dump_rc.
	disable
	(create_help_entries, create_menu_item): kill
	gtk_widget_lock_accelerators.

	* gnome-app.c (gnome_app_set_menus): use
	gtk_accel_groups_from_acceleratable instead of from_object;
	(gnome_app_add_toolbar): ditto.

2001-11-12  Darin Adler  <darin@bentspoon.com>

	* Same files again.
	Update for name change to GNOME_CALL_PARENT.

2001-11-12  Darin Adler  <darin@bentspoon.com>

	* gnome-about.c:
	* gnome-app.c:
	* gnome-appbar.c:
	* gnome-client.c:
	* gnome-color-picker.c:
	* gnome-dateedit.c:
	* gnome-druid-page-edge.c:
	* gnome-druid-page-standard.c:
	* gnome-druid-page.c:
	* gnome-druid.c:
	* gnome-font-picker.c:
	* gnome-href.c:
	* gnome-icon-entry.c:
	* gnome-icon-list.c:
	* gnome-icon-sel.c:
	* gnome-mdi-child.c: